k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-eks-nodejs
  namespace: default
  labels:
    app: hello-eks-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-eks-nodejs
  template:
    metadata:
      name: title
      labels:
        app: hello-eks-nodejs
    spec:
      containers:
        - name: hello-eks-nodejs
          image: 572472610359.dkr.ecr.eu-north-1.amazonaws.com/hello-eks-nodejs:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
