k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-eks-nodejs
  namespace: default
  labels:
    app: hello-eks-nodejs
spec:
  selector:
    app: hello-eks-nodejs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
