k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-eks-nodejs
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/group.name: eks-lab
spec:
  ingressClassName: alb
  rules:
    - host: hello.espi.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-eks-nodejs
                port:
                  number: 80
